# api/controllers/pet.controller.js
@@ -11,27 +11,14 @@ const ERR_PET_NOT_FOUND = 'Pet not found';
 const DELETED_SUCCESSFULLY = 'Pet deleted successfully';
 
 
-
-function createPet(req, res) {
-  /*try {
-    var params = req.body;
-    petService.createPet(params).then(function(result){
-      if (!_.isUndefined(result) && _.isUndefined(result.error)) {
-        res.status(201).json(result);
-      } else {
-        res.status(409).json(messageHelper.buildMessage(result.error));
-      }
-    });
-
-  } catch (error) {
-    controllerHelper.handleErrorResponse(MODULE_NAME, createPet.name, error, res);
-  }*/
-
+function getPetById(req, res) {
+    petService.getPetById(req.swagger.params.id.value)
+        .then(pet => pet ? res.json(pet) : res.sendStatus(404));
 }
 
 
 module.exports = {
-  createPet,
+  getPetById,
   ERR_PET_NOT_FOUND,
   DELETED_SUCCESSFULLY,
   MODULE_NAME
